--- a/HouseholdPlan.Server/Pages/CreateTask.cshtml
+++ b/HouseholdPlan.Server/Pages/CreateTask.cshtml
@@ -3,43 +3,155 @@
 @{
 }
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.HouseholdTask.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HouseholdTask.Description)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @*@foreach (var item in Model.Movie)
-            {
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+          "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title> HtmlInputText Example </title>
+</head>
+<body>
+    <form id="form1" runat="server">
+        <div>
+
+            <h3> HtmlInputText Example </h3>
+
+            <table>
                 <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Title)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ReleaseDate)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Genre)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Price)
-                    </td>
-                    <td>
-                        <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                        <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                        <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                    <td colspan="5">
+
+                        Enter integer values into the text boxes. <br />
+                        Click the Add button to add the two values. <br />
+                        Click the Reset button to reset the text boxes.
+
                     </td>
                 </tr>
-            }*@
-    </tbody>
-</table>
+                <tr>
+                    <td colspan="5">
+                        &nbsp;
+
+                    </td>
+                </tr>
+                <tr align="center">
+                    <td>
+
+                        <input id="Value1"
+                               type="Text"
+                               size="2"
+                               maxlength="3"
+                               value="1"
+                               runat="server" />
+
+                    </td>
+                    <td>
+                        +
+                    </td>
+                    <td>
+
+                        <input id="Value2"
+                               type="Text"
+                               size="2"
+                               maxlength="3"
+                               value="1"
+                               runat="server" />
+
+                    </td>
+                    <td>
+                        =
+                    </td>
+                    <td>
+
+                        <span id="AnswerMessage"
+                              runat="server" />
+
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+
+                        <asp:RequiredFieldValidator ID="Value1RequiredValidator"
+                                                    ControlToValidate="Value1"
+                                                    ErrorMessage="Please enter a value.<br />"
+                                                    Display="Dynamic"
+                                                    runat="server" />
+
+                        <asp:CompareValidator ID="Value1MinCompareValidator"
+                                              ControlToValidate="Value1"
+                                              Operator="LessThan"
+                                              Type="Integer"
+                                              ValueToCompare="100"
+                                              ErrorMessage="Please enter an integer less than 100.<br />"
+                                              Display="Dynamic"
+                                              runat="server" />
+
+                        <asp:CompareValidator ID="Value1MaxCompareValidator"
+                                              ControlToValidate="Value1"
+                                              Operator="GreaterThan"
+                                              Type="Integer"
+                                              ValueToCompare="0"
+                                              ErrorMessage="Please enter an integer greater than 0.<br />"
+                                              Display="Dynamic"
+                                              runat="server" />
+
+                    </td>
+                    <td colspan="2">
+
+                        <asp:RequiredFieldValidator ID="Value2RequiredValidator"
+                                                    ControlToValidate="Value2"
+                                                    ErrorMessage="Please enter a value.<br />"
+                                                    Display="Dynamic"
+                                                    runat="server" />
+
+                        <asp:CompareValidator ID="Value2MinCompareValidator"
+                                              ControlToValidate="Value2"
+                                              Operator="LessThan"
+                                              Type="Integer"
+                                              ValueToCompare="100"
+                                              ErrorMessage="Please enter an integer less than 100.<br />"
+                                              Display="Dynamic"
+                                              runat="server" />
+
+                        <asp:CompareValidator ID="Value2MaxCompareValidator"
+                                              ControlToValidate="Value2"
+                                              Operator="GreaterThan"
+                                              Type="Integer"
+                                              ValueToCompare="0"
+                                              ErrorMessage="Please enter an integer greater than 0.<br />"
+                                              Display="Dynamic"
+                                              runat="server" />
+
+                    </td>
+                    <td>
+                        &nbsp;
+                    </td>
+                </tr>
+                <tr align="center">
+                    <td colspan="4">
+
+                        <input type="Submit"
+                               name="AddButton"
+                               value="Add"
+                               onserverclick="AddButton_Click"
+                               runat="server" />
+
+                        &nbsp;&nbsp;&nbsp;
+
+                        <input type="Reset"
+                               name="AddButton"
+                               value="Reset"
+                               runat="server" />
+
+                    </td>
+                    <td>
+                        &nbsp;
+                    </td>
+                </tr>
+            </table>
+
+        </div>
+    </form>
+</body>
+</html>
