--- a/HouseholdPlan.Server/Pages/Shared/_Layout.cshtml
+++ b/HouseholdPlan.Server/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/CreateTask">Create</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Create">Create</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/TasksTable">MyTasks</a>
