--- a/HouseholdPlan.Server/Pages/_ViewImports.cshtml
+++ b/HouseholdPlan.Server/Pages/_ViewImports.cshtml
@@ -1,3 +1,5 @@
+@using Microsoft.AspNetCore.Identity
 @using HouseholdPlan.Server
+@using HouseholdPlan.Server.Data
 @namespace HouseholdPlan.Server.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
